Repaired broken 'waterfall-collapse' mode with tabs

--- a/client/imports/ui/md-tabs/md-tabs.styl
+++ b/client/imports/ui/md-tabs/md-tabs.styl
@@ -4,9 +4,6 @@
 
 @require '../md-common'
 
-/////////////////////    VARIABLES FOR MD TABS STYLES    ///////////////////////
-
-
 /////////////////////////    STYLES FOR MD TABS    /////////////////////////////
 .md-tabs
   width 100%
@@ -62,18 +59,8 @@
     .md-toolbar__bar.bottom .md-tabs
       padding 0
 
-////// On iPhone
+////// On Mobile
 .app.iphone,
-.app.iphone--320
-  .md-toolbar__bar.bottom .md-tabs
-    padding 0 0 0 2.75rem
-  .md-tab
-    min-width 4.5rem
-
-////// On Android phone
-.app.android,
-.app.android--320
-  .md-toolbar__bar.bottom .md-tabs
-    padding 0 0 0 2.75rem
+.app.android-phone
   .md-tab
     min-width 4.5rem
